test2-2023-06-11.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.1648 seconds

  ----Wall Time----  ----Name----
    1.1619 ( 99.7%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.0657 ( 91.5%)    Parse modules
    0.0029 (  0.3%)  Rest
    1.1648 (100.0%)  Total

{
  totalTime: 1.181,
  maxMemory: 165834752
}
